--- a/experiment-tracking/demo.ipynb
+++ b/experiment-tracking/demo.ipynb
@@ -102,7 +102,10 @@
     "writer_B.flush()\n",
     "writer_A.close()\n",
     "writer_B.close()\n",
-    "time.sleep(1)\n"
+    "time.sleep(1)\n",
+    "\n",
+    "print(\"Training complete. Use TensorBoard to visualize the logs.\")\n",
+    "print(\"Run: tensorboard --logdir=runs\")"
    ]
   },
   {
@@ -110,7 +113,118 @@
    "execution_count": null,
    "id": "82e75428",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.22.2"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "W&B syncing is set to <code>`offline`<code> in this directory. Run <code>`wandb online`<code> or set <code>WANDB_MODE=online<code> to enable cloud syncing.<br>Run data is saved locally in <code>d:\\The-Office\\Substack\\experiment-tracking\\wandb\\offline-run-20251012_135828-fd8689fk</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 000 | Loss A: 41.1978 | Loss B: 78.0126\n",
+      "Epoch 010 | Loss A: 1.7731 | Loss B: 62.0151\n",
+      "Epoch 020 | Loss A: 0.8247 | Loss B: 47.5393\n",
+      "Epoch 030 | Loss A: 0.8018 | Loss B: 32.7020\n",
+      "Epoch 040 | Loss A: 0.8012 | Loss B: 18.1579\n",
+      "Epoch 050 | Loss A: 0.8012 | Loss B: 7.2090\n",
+      "Epoch 060 | Loss A: 0.8011 | Loss B: 2.3166\n",
+      "Epoch 070 | Loss A: 0.8011 | Loss B: 1.2696\n",
+      "Epoch 080 | Loss A: 0.8011 | Loss B: 1.1545\n",
+      "Epoch 090 | Loss A: 0.8011 | Loss B: 1.1152\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m The nbformat package was not found. It is required to save notebook history.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>Loss/Model_A</td><td>█▆▃▂▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>Loss/Model_B</td><td>█▇▇▇▇▆▅▅▅▄▄▄▃▂▂▂▂▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>epoch</td><td>▁▁▁▁▁▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▄▄▄▄▄▅▅▅▅▅▆▆▆▆▇▇▇▇██</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>Loss/Model_A</td><td>0.80111</td></tr><tr><td>Loss/Model_B</td><td>1.01966</td></tr><tr><td>epoch</td><td>99</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "You can sync this run to the cloud by running:<br><code>wandb sync d:\\The-Office\\Substack\\experiment-tracking\\wandb\\offline-run-20251012_135828-fd8689fk<code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\offline-run-20251012_135828-fd8689fk\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Training complete! You can view your run on W&B online dashboard.\n"
+     ]
+    }
+   ],
    "source": [
     "# --- Install wandb if not installed ---\n",
     "# pip install wandb torch matplotlib\n",
@@ -119,12 +233,6 @@
     "from torch import nn, optim\n",
     "import wandb\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import time\n",
-    "\n",
-    "# --- Step 0: Set W&B to offline mode ---\n",
-    "os.environ[\"WANDB_MODE\"] = \"offline\"  # ensures everything stays local\n",
     "\n",
     "# --- Step 1: Synthetic Data ---\n",
     "x = torch.linspace(-5, 5, 100).unsqueeze(1)\n",
@@ -138,8 +246,8 @@
     "optimizer_A = optim.SGD(model_A.parameters(), lr=0.01)\n",
     "optimizer_B = optim.Adam(model_B.parameters(), lr=0.01)\n",
     "\n",
-    "# --- Step 3: Initialize W&B offline project ---\n",
-    "wandb.init(project=\"local-two-models\", name=\"Combined_Run\", reinit=True)\n",
+    "# --- Step 3: Initialize W&B project ---\n",
+    "wandb.init(project=\"two-models\", name=\"Combined_Run\")\n",
     "\n",
     "# Optional: Watch models to log weights and gradients\n",
     "wandb.watch(model_A, log=\"all\", log_freq=10)\n",
@@ -192,17 +300,75 @@
     "\n",
     "# --- Step 6: Finish W&B run ---\n",
     "wandb.finish()\n",
-    "time.sleep(1)\n",
     "\n",
-    "print(\"✅ Training complete! You can view your local W&B dashboard with `wandb local` and open http://localhost:8080\")\n"
+    "print(\"Training complete! You can view your run on W&B online dashboard.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7e229ec7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model_A | Epoch 000 | Loss: 101.1440\n",
+      "Model_A | Epoch 010 | Loss: 3.3405\n",
+      "Model_A | Epoch 020 | Loss: 0.8533\n",
+      "Model_A | Epoch 030 | Loss: 0.7037\n",
+      "Model_A | Epoch 040 | Loss: 0.6402\n",
+      "Model_A | Epoch 050 | Loss: 0.5986\n",
+      "Model_A | Epoch 060 | Loss: 0.5709\n",
+      "Model_A | Epoch 070 | Loss: 0.5524\n",
+      "Model_A | Epoch 080 | Loss: 0.5400\n",
+      "Model_A | Epoch 090 | Loss: 0.5318\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/10/12 14:02:18 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "Downloading artifacts: 100%|██████████| 8/8 [00:00<00:00, 1598.59it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model_B | Epoch 000 | Loss: 104.0675\n",
+      "Model_B | Epoch 010 | Loss: 84.1900\n",
+      "Model_B | Epoch 020 | Loss: 70.6771\n",
+      "Model_B | Epoch 030 | Loss: 59.6342\n",
+      "Model_B | Epoch 040 | Loss: 48.2134\n",
+      "Model_B | Epoch 050 | Loss: 35.3818\n",
+      "Model_B | Epoch 060 | Loss: 22.2125\n",
+      "Model_B | Epoch 070 | Loss: 11.0660\n",
+      "Model_B | Epoch 080 | Loss: 4.1188\n",
+      "Model_B | Epoch 090 | Loss: 1.5975\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/10/12 14:02:30 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "Downloading artifacts: 100%|██████████| 8/8 [00:00<00:00, 419.06it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training complete! Start MLflow UI:\n",
+      "python -m mlflow ui --backend-store-uri file:///D:\\The-Office\\Substack\\experiment-tracking\n",
+      "Open http://127.0.0.1:5000 in your browser.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch import nn, optim\n",
@@ -273,9 +439,9 @@
     "train_model(model_A, optimizer_A, \"Model_A\")\n",
     "train_model(model_B, optimizer_B, \"Model_B\")\n",
     "\n",
-    "print(\"\\n✅ Training complete! Start MLflow UI:\")\n",
+    "print(\"\\nTraining complete! Start MLflow UI:\")\n",
     "print(f\"python -m mlflow ui --backend-store-uri file:///{MLFLOW_RUNS_PATH}\")\n",
-    "print(\"Open http://127.0.0.1:5000 in your browser.\")\n"
+    "print(\"Open http://127.0.0.1:5000 in your browser.\")"
    ]
   },
   {
